test/libsolidity/syntaxTests/pragma/experimental_unknown_quoted_string_literal.sol
pragma experimental "unsupportedName";
// ----
// SyntaxError 8491: (0-38): Unsupported experimental feature name.
